--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ sping.datasource.driver-class-name=com.mysql.cj.jdbc.driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
