--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,25 @@
 spring.application.name=demo
+
 # Don't change the port
-server.port = 9001
-# for https
-server.forward-headers-strategy=framework 
-spring .datasource.url=jdbc;mysql://localhost:3306/transport_pro?
-create DatabaseIfNotExist=true;
+server.port=9001
+
+# For HTTPS / proxy
+server.forward-headers-strategy=framework
+
+
+# ===============================
+# MySQL Database Configuration
+# ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/transport_pro?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Amypo
-sping.datasource.driver-class-name=com.mysql.cj.jdbc.driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+
+# ===============================
+# JPA / Hibernate Configuration
+# ===============================
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
